# ztoc-rs

./: .gitignore  .replit  Cargo.toml  README.md  build.rs  flake.nix  replit.nix
src/: encode.rs  main.rs  zinfo.rs  ztoc.rs
src/flatbuffers/: ztoc.fbs
src/testdata/: expected  test.tar
