[package]
name = "ztoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
flatbuffers = "23.1.21"
libc = "0.2.140"
libz-sys = "1.1.8"
sha2 = "0.10.6"
tar = "0.4.38"

[build-dependencies]
flatc-rust = "0.2.0"
